WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
19363
Compiler error in Entity.h
https://bugs.webkit.org/show_bug.cgi?id=19363
Summary
Compiler error in Entity.h
Alexander Vassilev
Reported
2008-06-02 15:34:31 PDT
Compiling WebKit with MINGW, cygwin environment. Compiler says that class Entity has a default constructor but its base class ContainerNode doesn't have a default constructor. From what I found the Entity class is there only for compatibility, so I made a temporary fix with teh attached patch, but I hope someone competent can solve the problem the right way.
Attachments
proposed temporary fix
(552 bytes, patch)
2008-06-02 15:36 PDT
,
Alexander Vassilev
ap
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Alexander Vassilev
Comment 1
2008-06-02 15:36:24 PDT
Created
attachment 21470
[details]
proposed temporary fix
Alexey Proskuryakov
Comment 2
2008-06-03 00:56:51 PDT
Comment on
attachment 21470
[details]
proposed temporary fix I think that this is basically the right fix. I'll land it with some modifications. + Entity(): ContainerNode(0){}; We'd write this as + Entity() : ContainerNode(0) {} Also, the constructor should be private for clarity.
Alexey Proskuryakov
Comment 3
2008-06-03 00:57:59 PDT
Fixed in <
http://trac.webkit.org/changeset/34336
>.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug