2008-06-03  Alexander Vassilev <avasilev@voipgate.com>

Reviewed, tweaked and landed by Alexey.

        https://bugs.webkit.org/show_bug.cgi?id=19363
        Compiler error in Entity.h

        * dom/Entity.h:
        (WebCore::Entity::Entity): Add a private constructor to shut down the errors.



Canonical link: https://commits.webkit.org/26790@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@34336 268f45cc-cd09-0410-ab3c-d52691b4dbfc